<resources>
    <string name="app_name">smartlogger</string>
    <string name="btn_bugreport_txt">BUGREPORT</string>
    <string name="btn_systrace_txt">SYSTRACE</string>
    <string name="btn_logcat_txt">LOGCAT</string>
    <string name="btn_all_txt">ALL</string>
    <string name="btn_wrsk_txt">ENABLE WSK</string>
    <string name="btn_enable_atrace_txt">ENABLE ATRACE</string>
    <string name="btn_reinitlogcat_txt">REINIT LOGCAT</string>
    <string name="btn_settimeout_txt">SET TIMEOUT</string>
</resources>
