<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.wanbinwang.smartlogger.MainActivity">

    <Button
        android:text="@string/btn_bugreport_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="36dp"
        android:id="@+id/btn_bugreport" />

    <Button
        android:text="@string/btn_systrace_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn_bugreport"
        android:layout_toEndOf="@+id/btn_bugreport"
        android:layout_marginStart="38dp"
        android:id="@+id/btn_systrace" />

    <Button
        android:text="@string/btn_logcat_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_bugreport"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp"
        android:id="@+id/btn_logcat" />

    <Button
        android:text="@string/btn_all_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_logcat"
        android:layout_alignStart="@+id/btn_systrace"
        android:id="@+id/btn_all" />

    <Button
        android:text="@string/btn_wrsk_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_logcat"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp"
        android:id="@+id/btn_wrsk" />

    <Button
        android:text="@string/btn_enable_atrace_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_logcat"
		android:layout_alignStart="@+id/btn_all"
        android:layout_marginTop="28dp"
        android:id="@+id/btn_enable_atrace" />

    <Button
        android:text="@string/btn_reinitlogcat_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_wrsk"
		android:layout_alignStart="@+id/btn_wrsk"
        android:layout_marginTop="28dp"
        android:id="@+id/btn_reinitlogcat" />

</RelativeLayout>
